--- a/src/components/Stories.css
+++ b/src/components/Stories.css
@@ -5,6 +5,10 @@
   row-gap: 70px;
 }
 
+.stories__title {
+  max-width: 413px;
+}
+
 .stories__button {
   display: block;
   padding: 30px 0;
@@ -18,6 +22,7 @@
   width: 100%;
   border: none;
   cursor: pointer;
+  margin-top: 70px;
 }
 
 .stories__button:hover {
