--- a/src/components/UI/Button.css
+++ b/src/components/UI/Button.css
@@ -9,6 +9,11 @@
   transition: opacity 0.3s linear;
 }
 
+.button_theme_light {
+  background-color: #fff;
+  color: #000;
+}
+
 .button_size_s {
   width: 218px;
   height: 44px;
